kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noops
spec:
  replicas: 5
  selector:
    matchLabels:
      app: noops
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      name: noops
      labels:
        app: noops
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
      - name: noops
        image: sebidude/noops:1.0.0-085b084
        args:
          - -c
          - /config/config.yaml
        ports:
        - name: noops-port
          containerPort: 4242
        resources:
          limits:
            cpu: 0.1
            memory: "64M"
        volumeMounts:
        - name: config-vol  
          mountPath: /config

        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          httpGet:
            path: /alive
            port: 4242

        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          httpGet:
            path: /alive
            port: 4242
      volumes:
      - name: config-vol
        configMap:
          name: noops-config
