kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: noops
spec:
  rules:
  - host: noops.iostat.de
    http:
      paths:
      - backend:
          serviceName: noops
          servicePort: 4242
        path: /
